@@ -1,3 +1,7 @@
+2012-06-26	Stephan Linz <linz@li-pro.net>
+
+	* common: improve build_all.mk make script
+
 2012-06-25	Stephan Linz <linz@li-pro.net>
 
 	* ptxconfig: add BSP private issue file
